add tasks object

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     
 </body>
-<script src="js/arrays.js"></script>
+<!-- <script src="js/arrays.js"></script> -->
 <script src="js/object.js"></script>
 </html>
